Bug 287176 - Today Kubuntu pushed out a new kernel, but the notifier didn't install it
Summary: Today Kubuntu pushed out a new kernel, but the notifier didn't install it
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: notifier (other bugs)
Version First Reported In: 0.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-21 15:43 UTC by mgolden
Modified: 2012-01-28 15:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mgolden 2011-11-21 15:43:20 UTC
Version:           0.2 (using KDE 4.7.2) 
OS:                Linux

Today there was a new kernel pushed out, 3.0.0.13.  When the notifier came up, three checkboxes are unchecked, the ones that actually install the new kernel.  If you check them, the notifier tells you that changes to other packages are required.  The default response will be for non-technical users to simply leave these packages uninstalled.  This is not a good idea, given that the these are security updates. 

Reproducible: Always

Steps to Reproduce:
A security update is issued that requires a new kernel

Actual Results:  
The checkboxes to update the kernel are unchecked, and the kernel does not update

Expected Results:  
Security patches should apply if they're well formed.

OS: Linux (x86_64) release 3.0.0-12-generic
Compiler: gcc
Comment 1 Jonathan Thomas 2012-01-28 15:17:02 UTC
Git commit 6049c20fc19d054e25b0db30ca36f1e33bea7092 by Jonathan Thomas.
Committed on 28/01/2012 at 16:14.
Pushed by jmthomas into branch 'master'.

When updates are not marked due to the updates requiring the installation or removal of
other packages, inform the user and ask them if they wish to mark these updates.

M  +36   -3    updater/UpdaterWidget.cpp
M  +1    -0    updater/UpdaterWidget.h

http://commits.kde.org/muon/6049c20fc19d054e25b0db30ca36f1e33bea7092