When updates are not marked due to the updates requiring the installation or removal of other packages, inform the user and ask them if they wish to mark these updates.

BUG:287176